[package]
name = "seolgi"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.229", features = ["derive"] }
yaml_serde = "0.10.4"
strum = { version = "0.28.0", features = ["derive"] }
anyhow = "1.0.104"
clap = { version = "4.6.4", features = ["derive"] }
landlock = { version = "0.4.5", optional = true }

[features]
default = ["landlock"]
landlock = ["dep:landlock"]
